**  denotes quite substantial/important changes
*** denotes really big changes 

1.4-1

* minor doc bug fix for `smooth.construct'.

1.4-0

*** Model terms can now include linear functionals of smooths, by 
    supplying matrix arguments and matrix `by' variables to model 
    smooth terms. This allows, for example, a model to depend on the 
    integral of a smooth function, or its derivative, or for models to 
    depend on functional  predictors. See ?linear.functional.terms. Main 
    code changes are in `smoothCon' and `predMat'.

** Smooth terms can now be linked in order that they have the same 
   smoothing parameters (and, by default, bases). Linkage is specified
   using the `id' argument to `s' or `te'. Terms with the same `id' value
   will have the same smoothing parameter(s).

** `by' variables can now be factor variables. Also smooth terms with a 
   `by' variable are only subject to a sum-to-zero constraint if it
   is needed for identifiability.

** Argument `paraPen' of `gam' allows (multiple) penalization of 
   parametric model terms. This allows `gam' to fit any model that
   can be expressed as a penalized GLM.

** p-values returned by `summary.gam' now default to a Bayesian 
   approximation which gives (substantially) better frequentist behaviour 
   than the old method.

** The 2 standard error bands for smooths shown by `plot.gam' can now
   include the uncertainty about the overall mean, by default. Such
   intervals have better coverage probability (of their target of 
   inference) than intervals for centred smooths. Argument 
   `type="iterms"' to `predict.gam' will return such standard errors.

** An adaptive smoother class has been added, for smoothing with respect
   to one or two variables: invoked with `s(...,bs="ad",...). 

** `gamm' now supports nested smooth terms, and uses the same, constraint 
   absorbed, parameterization as `gam'.

** `s' and `te' terms accept an `sp' argument setting the term specific 